# pytorch-for-dl

./: .gitignore  main.py  pyproject.toml
data_management_in_pytorch/: helper_utils.py
getting_started_with_pytorch/nonlinear_nn/: nonlinear_nn.ipynb
nonlinear_nn/: nonlinear_nn.ipynb
pytorch_basics/core_pytorch/: tensor_manipulation.ipynb
simple_nn/: simple_nn.ipynb
the_pytorch_workflow/: mnist_image_classification.ipynb
