[project]
name = "pytorch-for-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asttokens>=3.0.1",
    "comm>=0.2.3",
    "matplotlib>=3.10.8",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
]
